<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorGray"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <fragment
            android:id="@+id/map_track_order"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            app:cardCornerRadius="4dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:gravity="center">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_to_summary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/text_your_order_status"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_medium" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_track_refresh"
                            android:layout_width="wrap_content"
                            android:layout_height="36dp"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="8dp"
                            android:background="@drawable/ic_shape_vertical_rectangle"
                            android:text="@string/btn_refresh" />

                    </RelativeLayout>

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/checkbox_order_placed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/check_order_place"
                        android:textSize="@dimen/text_medium" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/colorGray" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/checkbox_order_confirmed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/check_order_confirmed"
                        android:textSize="@dimen/text_medium" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/colorGray" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/checkbox_preparing_food"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/check_preparing_food"
                        android:textSize="@dimen/text_medium" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/colorGray" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/checkbox_food_ready"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/check_food_ready"
                        android:textSize="@dimen/text_medium" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/colorGray" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/checkbox_food_on_way"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/check_food_on_way"
                        android:textSize="@dimen/text_medium" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/colorGray" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/checkbox_food_delivered"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="12dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/check_delivered"
                        android:textSize="@dimen/text_medium" />
                </LinearLayout>
            </ScrollView>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>

