<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    tools:context=".view.foodcart.otpverification.PhoneVerificationActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="16dp"
        app:cardCornerRadius="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/text_enter_code"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_medium" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_code_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:padding="6dp"
                android:text=""
                android:textSize="@dimen/text_small" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_verification_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_edittext_square"
                android:hint="@string/text_enter_otp"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="10"
                android:padding="8dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_medium" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_verify_otp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:background="@color/colorAccent"
                android:text="@string/btn_verify_otp"
                android:textColor="@android:color/white" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_resend_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/text_resend_code"
                android:textSize="@dimen/text_small" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>